--- a/hhhhhh-wxopen/pages/index/index.wxss
+++ b/hhhhhh-wxopen/pages/index/index.wxss
@@ -1,8 +1,3 @@
-.main_content {
-  background: #f9f9f9;
-  padding-bottom: 15pt;
-}
-
 .slide-image {
   width: 100%;
   height: 100%;
@@ -30,4 +25,11 @@
 
 .hot_good_card {
   padding: 0 !important;
+}
+
+.text_loading_more {
+  text-align: center;
+  font-size: 10pt;
+  color: #999;
+  margin: 12pt 0;
 }
